--- a/compiler.html
+++ b/compiler.html
@@ -3,15 +3,15 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>BYOB One - Minimal Wallet + TX Builder</title>
+<title>BYOB One - Minimal Wallet</title>
 <style>
 body { font-family: sans-serif; max-width:480px; margin:auto; padding:20px; }
 .screen { display:none; }
 .screen.active { display:block; }
-input, button { font-size:16px; padding:8px; margin:5px 0; width:100%; }
+input, button, textarea { font-size:16px; padding:8px; margin:5px 0; width:100%; box-sizing:border-box; }
 canvas { display:block; margin:10px auto; }
 .network-toggle { margin-bottom:10px; }
-#xpubScanner { width:100%; height:300px; display:none; border:1px solid #ccc; margin-top:10px; }
+#xpubScanner, #destScanner { width:100%; height:300px; display:none; border:1px solid #ccc; margin-top:10px; }
 .warning { color:red; font-size:14px; margin-top:5px; }
 </style>
 </head>
@@ -48,11 +48,17 @@ canvas { display:block; margin:10px auto; }
 <div id="sendScreen" class="screen">
   <p><strong>Destination Address:</strong></p>
   <input type="text" id="destAddress" placeholder="Paste or scan address">
+  <button onclick="startDestScan()">Scan Destination QR</button>
+  <div id="destScanner"></div>
+  <div id="destWarning" class="warning"></div>
+
   <p><strong>Amount (sats):</strong></p>
   <input type="number" id="sendAmount" placeholder="Satoshis">
+
   <p><strong>Fee rate (sat/vbyte):</strong></p>
   <input type="range" id="feeSlider" min="1" max="200" value="10" oninput="document.getElementById('feeValue').innerText = this.value">
   <span id="feeValue">10</span> sat/vB
+
   <button onclick="buildTx()">Build TX</button>
   <button onclick="goToWallet()">Back</button>
 </div>
@@ -60,9 +66,9 @@ canvas { display:block; margin:10px auto; }
 <!-- Sign Screen -->
 <div id="signScreen" class="screen">
   <p>Unsigned TX hex:</p>
-  <textarea id="unsignedTx" rows="6" style="width:100%"></textarea>
+  <textarea id="unsignedTx" rows="6"></textarea>
   <p>Sign on Seedsigner and paste signed TX here:</p>
-  <textarea id="signedTx" rows="6" style="width:100%"></textarea>
+  <textarea id="signedTx" rows="6"></textarea>
   <button onclick="broadcastTx()">Broadcast TX</button>
   <button onclick="goToWallet()">Back</button>
   <div id="txStatus"></div>
@@ -78,7 +84,6 @@ canvas { display:block; margin:10px auto; }
 <script>
 document.addEventListener("DOMContentLoaded", () => {
   window.Buffer = window.buffer.Buffer;
-
   const { networks, payments, Psbt } = bitcoin;
   const bip32 = window.bip32;
 
@@ -90,9 +95,7 @@ document.addEventListener("DOMContentLoaded", () => {
   const sendScreen = document.getElementById("sendScreen");
   const signScreen = document.getElementById("signScreen");
 
-  // ------------------
   // NETWORK TOGGLE
-  // ------------------
   document.querySelectorAll('input[name="network"]').forEach(radio => {
     radio.addEventListener("change", function() {
       currentNetwork = this.value;
@@ -101,26 +104,18 @@ document.addEventListener("DOMContentLoaded", () => {
   });
 
   function getNetworkObject() {
-    return currentNetwork === "mainnet"
-      ? networks.bitcoin
-      : networks.testnet;
+    return currentNetwork === "mainnet" ? networks.bitcoin : networks.testnet;
   }
 
   function getStorageKey() {
-    return currentNetwork === "mainnet"
-      ? "byob_xpub_mainnet"
-      : "byob_xpub_testnet";
+    return currentNetwork === "mainnet" ? "byob_xpub_mainnet" : "byob_xpub_testnet";
   }
 
   function getApiBase() {
-    return currentNetwork === "mainnet"
-      ? "https://mempool.space/api"
-      : "https://mempool.space/testnet/api";
+    return currentNetwork === "mainnet" ? "https://mempool.space/api" : "https://mempool.space/testnet/api";
   }
 
-  // ------------------
   // SCREEN CONTROL
-  // ------------------
   function showScreen(screen) {
     walletScreen.classList.remove("active");
     sendScreen.classList.remove("active");
@@ -131,21 +126,13 @@ document.addEventListener("DOMContentLoaded", () => {
   window.goToWallet = () => showScreen(walletScreen);
   window.goToSign = () => showScreen(signScreen);
 
-  // ------------------
   // XPUB HANDLING
-  // ------------------
   function saveXpub() {
     const xpub = document.getElementById("xpubInput").value.trim();
     if (!xpub) return alert("Enter XPUB");
-
-    try {
-      localStorage.setItem(getStorageKey(), xpub);
-      loadWallet();
-    } catch (err) {
-      alert("Error saving/loading XPUB: " + err.message);
-    }
+    try { localStorage.setItem(getStorageKey(), xpub); loadWallet(); }
+    catch (err) { alert("Error saving/loading XPUB: "+err.message); }
   }
-
   window.saveXpub = saveXpub;
 
   function startXpubScan() {
@@ -155,7 +142,7 @@ document.addEventListener("DOMContentLoaded", () => {
     warningDiv.innerText = "";
 
     if (!navigator.mediaDevices || !navigator.mediaDevices.getUserMedia) {
-      warningDiv.innerText = "Camera not supported in this browser.";
+      warningDiv.innerText = "Camera not supported.";
       return;
     }
 
@@ -163,24 +150,44 @@ document.addEventListener("DOMContentLoaded", () => {
     html5QrCode.start(
       { facingMode: "environment" },
       { fps: 10, qrbox: 250 },
-      (decodedText) => {
-        html5QrCode.stop().then(() => {
-          scannerDiv.style.display = "none";
+      decodedText => {
+        html5QrCode.stop().then(()=>{
+          scannerDiv.style.display="none";
           document.getElementById("xpubInput").value = decodedText.trim();
           saveXpub();
         });
-      },
-      (errorMessage) => {}
-    ).catch(err => {
-      console.error("Unable to start QR scanner:", err);
-      warningDiv.innerText = "Cannot start camera. Use HTTPS.";
-    });
+      }, err=>{}
+    ).catch(err => { warningDiv.innerText="Cannot start camera. Use HTTPS."; console.error(err); });
   }
   window.startXpubScan = startXpubScan;
 
-  // ------------------
+  // DESTINATION SCANNER
+  function startDestScan() {
+    const scannerDiv = document.getElementById("destScanner");
+    const warningDiv = document.getElementById("destWarning");
+    scannerDiv.style.display = "block";
+    warningDiv.innerText = "";
+
+    if (!navigator.mediaDevices || !navigator.mediaDevices.getUserMedia) {
+      warningDiv.innerText = "Camera not supported.";
+      return;
+    }
+
+    const html5QrCode = new Html5Qrcode("destScanner");
+    html5QrCode.start(
+      { facingMode: "environment" },
+      { fps: 10, qrbox: 250 },
+      decodedText => {
+        html5QrCode.stop().then(()=>{
+          scannerDiv.style.display="none";
+          document.getElementById("destAddress").value = decodedText.trim();
+        });
+      }, err=>{}
+    ).catch(err => { warningDiv.innerText="Cannot start camera. Use HTTPS."; console.error(err); });
+  }
+  window.startDestScan = startDestScan;
+
   // LOAD WALLET
-  // ------------------
   async function loadWallet() {
     const stored = localStorage.getItem(getStorageKey());
     if (!stored) {
@@ -190,138 +197,74 @@ document.addEventListener("DOMContentLoaded", () => {
     }
     document.getElementById("xpubImportSection").style.display = "none";
     document.getElementById("walletInfoSection").style.display = "block";
-
     document.getElementById("balanceDisplay").innerText = "Loading...";
     document.getElementById("receiveAddress").innerText = "Deriving...";
-
-    try {
-      await deriveAddresses(stored);
-      await fetchBalance();
-    } catch (err) {
-      alert("Error loading wallet: " + err.message);
-    }
+    try { await deriveAddresses(stored); await fetchBalance(); }
+    catch (err) { alert("Error loading wallet: "+err.message); }
   }
 
-  // ------------------
-  // DERIVE ADDRESSES
-  // ------------------
   async function deriveAddresses(xpub) {
     derivedAddresses = [];
     const network = getNetworkObject();
-
     try {
       const node = bip32.fromBase58(xpub, network);
-      for (let i = 0; i < 20; i++) {
+      for (let i=0; i<20; i++){
         const child = node.derive(0).derive(i);
         const { address } = payments.p2wpkh({ pubkey: child.publicKey, network: network });
         derivedAddresses.push(address);
       }
-    } catch (error) {
-      alert("Invalid XPUB: " + error.message);
-    }
+    } catch(error){ alert("Invalid XPUB: "+error.message); }
   }
 
-  // ------------------
-  // FETCH BALANCE
-  // ------------------
   async function fetchBalance() {
-    utxos = [];
-    let total = 0;
-    const api = getApiBase();
-
+    utxos = []; let total = 0; const api = getApiBase();
     for (let address of derivedAddresses) {
-      try {
-        const res = await fetch(`${api}/address/${address}/utxo`);
+      try { const res = await fetch(`${api}/address/${address}/utxo`);
         const data = await res.json();
-        if (data.length > 0) {
-          data.forEach(u => {
-            utxos.push({ txid: u.txid, vout: u.vout, value: u.value, address: address });
-            total += u.value;
-          });
-        }
-      } catch (err) {
-        console.error("Error fetching balance for address", address, err);
-      }
+        if (data.length>0){ data.forEach(u=>{ utxos.push({txid:u.txid,vout:u.vout,value:u.value,address:address}); total+=u.value; }); }
+      } catch(err){ console.error("Error fetching address",address,err); }
     }
-
-    document.getElementById("balanceDisplay").innerText = total.toLocaleString() + " sats";
+    document.getElementById("balanceDisplay").innerText = total.toLocaleString()+" sats";
     displayNextReceive();
   }
 
-  // ------------------
-  // DISPLAY NEXT RECEIVE
-  // ------------------
-  function displayNextReceive() {
+  function displayNextReceive(){
     const next = derivedAddresses[0];
     document.getElementById("receiveAddress").innerText = next;
-    QRCode.toCanvas(document.getElementById("receiveQR"), next, { width: 220 });
+    QRCode.toCanvas(document.getElementById("receiveQR"), next, { width:220 });
   }
 
-  // ------------------
   // TX BUILDER
-  // ------------------
   window.buildTx = () => {
     const dest = document.getElementById("destAddress").value.trim();
     const amount = parseInt(document.getElementById("sendAmount").value.trim());
     const feeRate = parseInt(document.getElementById("feeSlider").value.trim());
+    if(!dest||!amount) return alert("Enter destination and amount");
 
-    if (!dest || !amount) return alert("Enter destination and amount");
-
-    const psbt = new Psbt({ network: getNetworkObject() });
-    let inputTotal = 0;
-
-    for (let u of utxos) {
-      if (inputTotal >= amount + 1000) break;  // minimal buffer
-      psbt.addInput({
-        hash: u.txid,
-        index: u.vout,
-        witnessUtxo: {
-          script: payments.p2wpkh({ address: u.address, network: getNetworkObject() }).output,
-          value: u.value
-        }
-      });
-      inputTotal += u.value;
-    }
-
-    if (inputTotal < amount) return alert("Insufficient balance");
-
-    psbt.addOutput({ address: dest, value: amount });
-    psbt.addOutput({ address: derivedAddresses[0], value: inputTotal - amount }); // simple change
-
-    document.getElementById("unsignedTx").value = psbt.toHex();
+    const psbt = new Psbt({network:getNetworkObject()});
+    let inputTotal=0;
+    for(let u of utxos){ if(inputTotal>=amount+1000) break; psbt.addInput({hash:u.txid,index:u.vout,witnessUtxo:{script:payments.p2wpkh({address:u.address,network:getNetworkObject()}).output,value:u.value}}); inputTotal+=u.value;}
+    if(inputTotal<amount) return alert("Insufficient balance");
+    psbt.addOutput({address:dest,value:amount});
+    psbt.addOutput({address:derivedAddresses[0],value:inputTotal-amount});
+    document.getElementById("unsignedTx").value=psbt.toHex();
     goToSign();
   };
 
-  // Broadcast TX
-  window.broadcastTx = async () => {
-    const signedHex = document.getElementById("signedTx").value.trim();
-    if (!signedHex) return alert("Paste signed TX hex");
-
-    const api = getApiBase();
-    try {
-      const res = await fetch(`${api}/tx`, {
-        method:"POST",
-        headers:{"Content-Type":"text/plain"},
-        body: signedHex
-      });
-      if (res.ok) {
-        document.getElementById("txStatus").innerText = "TX broadcasted!";
-      } else {
-        document.getElementById("txStatus").innerText = "Error broadcasting TX";
-      }
-    } catch(err) {
-      document.getElementById("txStatus").innerText = "Error: " + err.message;
-    }
+  window.broadcastTx=async()=>{
+    const signedHex=document.getElementById("signedTx").value.trim();
+    if(!signedHex) return alert("Paste signed TX hex");
+    const api=getApiBase();
+    try{
+      const res=await fetch(`${api}/tx`,{method:"POST",headers:{"Content-Type":"text/plain"},body:signedHex});
+      document.getElementById("txStatus").innerText = res.ok?"TX broadcasted!":"Error broadcasting TX";
+    }catch(err){document.getElementById("txStatus").innerText="Error: "+err.message;}
   };
 
   loadWallet();
+
 });
 </script>
 
 </body>
 </html>
-
-
-
-
-
