--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@ If you do not understand these risks, do not proceed.
   <a class="button" href="ledger.html">LEDGER</a>
   <a class="button" href="qr_translator.html">QR TRANSLATOR</a>
   <a class="button" href="compiler.html">COMPILER</a>
+  <a class="button" href="test.html">TEST</a>
   
   <footer>
     &copy; 2026 BYOB Project. All rights reserved.
