--- a/compiler.html
+++ b/compiler.html
@@ -112,15 +112,16 @@ canvas {
 </div>
 
 <!-- LIBRARIES (STATIC + STABLE) -->
-<script src="https://cdn.jsdelivr.net/npm/buffer@6.0.3/index.min.js"></script>
+
+<script src="js/buffer.min.js"></script>
 <script>
-window.Buffer = window.buffer.Buffer;
+  window.Buffer = window.buffer.Buffer;
 </script>
 
-<script src="https://unpkg.com/bip32@2.0.6/browser.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bitcoinjs-lib@6.1.0/dist/bitcoinjs-lib.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/qrcode@1.5.3/build/qrcode.min.js"></script>
-<script src="https://unpkg.com/html5-qrcode@2.3.7/minified/html5-qrcode.min.js"></script>
+<script src="js/bip32.min.js"></script>
+<script src="js/bitcoinjs-lib.min.js"></script>
+<script src="js/qrcode.min.js"></script>
+<script src="js/html5-qrcode.min.js"></script>
 
 <script>
 const { networks, payments, Psbt } = bitcoin;
