--- a/test.html
+++ b/test.html
@@ -30,10 +30,6 @@ input, button { font-size:16px; padding:10px; margin:10px 0; width:100%; box-siz
 
 
 <script src="js/buffer.min.js"></script>
-<script>
-  window.Buffer = window.buffer.Buffer;
-</script>
-
 <script src="js/bip32.min.js"></script>
 <script src="js/bitcoinjs-lib.min.js"></script>
 <script src="js/qrcode.min.js"></script>
@@ -56,7 +52,7 @@ setTimeout(() => {
   const checkInterval = setInterval(() => {
     checks++;
     
-    const bufferOK = typeof window.buffer !== 'undefined';
+    const bufferOK = typeof window.Buffer !== 'undefined';
     const bip32OK = typeof window.bip32 !== 'undefined';
     const bitcoinOK = typeof window.bitcoin !== 'undefined';
     
